Tools/IDLParser/src/parsing/javaccparser/IDLParser.java
/* IDLParser.java */
/* Generated By:JavaCC: Do not edit this line. IDLParser.java */
package parsing.javaccparser;

import java.io.FileNotFoundException;
import java.util.logging.Level;
import java.util.logging.Logger;
import parsing.IDLField;
import parsing.javaccparser.ParseException;

public class IDLParser implements IDLParserConstants {
    private IDLField currentIDLField;
    private Token currentToken = null;

    public ParserEvent<String> packageDeclareEvent = new ParserEvent<String>();
    public ParserEvent<String> idlDeclareEvent = new ParserEvent<String>();
    public ParserEvent<String> enumDeclareEvent = new ParserEvent<String>();
    public ParserEvent<String> idlCloseEvent = new ParserEvent<String>();
    public ParserEvent<String> enumCloseEvent = new ParserEvent<String>();
    public ParserEvent<IDLField> fieldDeclareEvent = new ParserEvent<IDLField>();
    public ParserEvent<String> extendsEvent = new ParserEvent<String>();
    public ParserEvent<String> enumElementEvent = new ParserEvent<String>();
    public ParserEvent<String> commentEvent = new ParserEvent<String>();
    public ParserEvent<String> directiveEvent = new ParserEvent<String>();

    public void genErrorMessage(String msg) throws parsing.javaccparser.ParseException
    {
        if (currentToken != null) {
            msg += " at line " + currentToken.beginLine + ", column " + currentToken.beginColumn + ".";
        } else {
            msg += ".";
        }
        throw new parsing.javaccparser.ParseException(msg);
    }

  public static void main(String args[])
  {
    try
    {
        IDLParser parser;
        parser = new IDLParser(new java.io.FileInputStream("TestIDL.idl"));

        parser.idlDeclareEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("class " + eventData + " declared.");
                }
            });
        parser.idlCloseEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("class " + eventData + " done.");
                }
            });

        parser.packageDeclareEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("package " + eventData + " declared.");
                }
            });

        parser.enumDeclareEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("enum " + eventData + " declared.");
                }
            });
        parser.enumCloseEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("enum " + eventData + " done.");
                }
            });
        parser.enumElementEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("enum element " + eventData + ".");
                }
            });
        parser.fieldDeclareEvent.add(new ParserEventCallback<IDLField>() {

                public void onEvent(IDLField eventData, ParserEvent e)
                {
                    System.out.println("  eventData.getName()      : " + eventData.getName());
                    System.out.println("  eventData.getArraySize() : " + eventData.getArraySize());
                    System.out.println("  eventData.getStringSize(): " + eventData.getStringSize());
                    System.out.println("  eventData.getType()      : " + eventData.getType());
                    System.out.println("  eventData.getComment()   : " + eventData.getComment());
                    System.out.println("  eventData.getValue()     : " + eventData.getValue());
                    System.out.println("  eventData.isIdlType()    : " + eventData.isIdlType());
                    System.out.println("  eventData.isArray()      : " + eventData.isArray());
                    System.out.println("  eventData.isStatic()     : " + eventData.isStatic());
                    System.out.println("  eventData.isAbstract()   : " + eventData.isAbstract());
                    System.out.println("");
                }
            });
        parser.extendsEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("extends  " + eventData + ".");
                }
            });
        parser.directiveEvent.add(new ParserEventCallback<String>() {

                public void onEvent(String eventData, ParserEvent e)
                {
                    System.out.println("directive:  " + eventData + ".");
                }
            });


        parser.specification();
    }
    catch (ParseException ex)
    {
        Logger.getLogger(IDLParser.class.getName()).log(Level.SEVERE, null, ex);
    }
    catch (FileNotFoundException ex)
    {
        Logger.getLogger(IDLParser.class.getName()).log(Level.SEVERE, null, ex);
    }
  }

/* Production 1 */
  final public 
void specification() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 7:{
      definition();
      break;
      }
    case ANOTATION:{
      label_1:
      while (true) {
        jj_consume_token(ANOTATION);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ANOTATION:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/* Production 2 */
  final public 
void definition() throws ParseException {
    jj_consume_token(7);
    module();
    jj_consume_token(8);
    label_2:
    while (true) {
      body_declare();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 9:
      case 12:
      case 13:
      case ANOTATION:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    jj_consume_token(0);
  }

  final public void body_declare() throws ParseException {String comment = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 9:
    case 12:
    case 13:{
      type_declare();
      break;
      }
    case ANOTATION:{
      comment = jj_consume_token(ANOTATION).image;
commentEvent.fireEvent(comment);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void type_declare() throws ParseException {
    if (jj_2_1(2)) {
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 9:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        directive_declare();
      }
      struct_type();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 13:{
        enum_type();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void directive_declare() throws ParseException {String directive = ""; String tName = "";
    jj_consume_token(9);
    tName = identifier();
directive += tName;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 10:{
      jj_consume_token(10);
directive += " = ";
      tName = directive_value();
directive += tName;
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
directiveEvent.fireEvent(directive);
  }

  final public String directive_value() throws ParseException {String value = ""; Long val = 0L;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      value = jj_consume_token(ID).image;
{if ("" != null) return value;}
      break;
      }
    case OCTALINT:
    case DECIMALINT:
    case HEXADECIMALINT:{
      val = integer_literal();
{if ("" != null) return Long.toString(val);}
      break;
      }
    case 32:
    case 33:{
      value = boolean_literal();
{if ("" != null) return value;}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Production 3 */
  final public 
String module() throws ParseException {String packName = ""; String tName = "";
    tName = identifier();
packName += tName;
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_4;
      }
      jj_consume_token(11);
packName += ".";
      tName = identifier();
packName += tName;
    }
packageDeclareEvent.fireEvent(packName);
        {if ("" != null) return packName;}
    throw new Error("Missing return statement in function");
  }

  final public String struct_type() throws ParseException {String name = "";
    String parName = "";
    jj_consume_token(12);
    name = identifier();
idlDeclareEvent.fireEvent(name);
    member_list();
{idlCloseEvent.fireEvent(name);}
    ///System.out.println("struct " + name);
    {if ("" != null) return name;}
    throw new Error("Missing return statement in function");
  }

  final public String enum_type() throws ParseException {String name = "";
    jj_consume_token(13);
    name = identifier();
enumDeclareEvent.fireEvent(name);
    jj_consume_token(14);
    enum_body();
    jj_consume_token(15);
enumCloseEvent.fireEvent(name);
        {if ("" != null) return name;}
    throw new Error("Missing return statement in function");
  }

  final public void enum_body() throws ParseException {String tName = "";String ANOTATION = ""; String tANOTATION = "";
    tName = identifier();
enumElementEvent.fireEvent(tName);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 16:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
      jj_consume_token(16);
      tName = identifier();
enumElementEvent.fireEvent(tName);
    }
  }

/* Production 51 */
  final public 
void member_list() throws ParseException {String tName = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 17:{
      jj_consume_token(17);
      tName = idl_type();
extendsEvent.fireEvent(tName);
      jj_consume_token(14);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 18:
        case 21:
        case 22:
        case 23:
        case 24:
        case 25:
        case 26:
        case 27:
        case 28:
        case 29:
        case ID:
        case ANOTATION:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_6;
        }
        member();
      }
      jj_consume_token(15);
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_2(2)) {
        jj_consume_token(14);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case 18:
          case 21:
          case 22:
          case 23:
          case 24:
          case 25:
          case 26:
          case 27:
          case 28:
          case 29:
          case ID:
          case ANOTATION:{
            ;
            break;
            }
          default:
            jj_la1[11] = jj_gen;
            break label_7;
          }
          member();
        }
        jj_consume_token(15);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/* Production 52 */
  final public 
void member() throws ParseException {String typeName = ""; String fieldName = ""; String comment = ""; String tComment = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 21:
    case 22:
    case 23:
    case 24:
    case 25:
    case 26:
    case 27:
    case 28:
    case 29:
    case ID:{
currentIDLField = new IDLField(fieldName, "");
      typeName = type_spec();
      fieldName = declarators(currentIDLField);
      jj_consume_token(8);
if(fieldName.contains("[") && fieldName.contains("]"))
        {
            typeName = typeName.trim() + fieldName.substring(fieldName.indexOf("["), fieldName.indexOf("]") + 1);
            fieldName = fieldName.replace("[", "").trim();
            fieldName = fieldName.replace("]", "").trim();
            //currentIDLField.setArray(true);
        }

        currentIDLField.setName(fieldName);
        currentIDLField.setType(typeName);
        fieldDeclareEvent.fireEvent(currentIDLField);
      break;
      }
    case 18:{
currentIDLField = new IDLField(fieldName, "");
      jj_consume_token(18);
      const_decl();
      jj_consume_token(8);
      break;
      }
    case ANOTATION:{
      comment = jj_consume_token(ANOTATION).image;
commentEvent.fireEvent(comment);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void const_decl() throws ParseException {String typeName = ""; String fieldName = ""; String cvalue = ""; Long cval = 0L; double dval = 0.0;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 24:
    case 25:
    case 26:
    case 27:{
      typeName = integer_type();
      fieldName = identifier();
      jj_consume_token(10);
      cval = integer_literal();
cvalue = Long.toString(cval);
        if (typeName.equals("byte") && ((cval < 0) || (cval > 255))) {
            genErrorMessage("Illegal byte value '" + cvalue + "'");
        }
        if (typeName.equals("short") && ((cval < -32768) || (cval > 32767))) {
            genErrorMessage("Illegal short value '" + cvalue + "'");
        }
        if (typeName.equals("int") && ((cval < Integer.MIN_VALUE) || (cval > Integer.MAX_VALUE))) {
            genErrorMessage("Illegal int value '" + cvalue + "'");
        }
        currentIDLField.setName(fieldName);
        currentIDLField.setType(typeName);
        currentIDLField.setValue(cvalue);
        currentIDLField.setStatic(true);
        fieldDeclareEvent.fireEvent(currentIDLField);
      break;
      }
    case 22:
    case 23:{
      typeName = floating_pt_type();
      fieldName = identifier();
      jj_consume_token(10);
      dval = floating_pt_literal();
cvalue = Double.toString(dval);
        if (typeName.equals("float") && ((dval < -Float.MAX_VALUE) || (dval > Float.MAX_VALUE))) {
            genErrorMessage("Illegal float value '" + cvalue + "'");
        }
        currentIDLField.setName(fieldName);
        currentIDLField.setType(typeName);
        currentIDLField.setValue(cvalue);
        currentIDLField.setStatic(true);
        fieldDeclareEvent.fireEvent(currentIDLField);
      break;
      }
    case 29:{
      typeName = string_type();
      fieldName = identifier();
      jj_consume_token(10);
      cvalue = string_literal();
currentIDLField.setName(fieldName);
        currentIDLField.setType(typeName);
        currentIDLField.setValue(cvalue);
        currentIDLField.setStatic(true);
        fieldDeclareEvent.fireEvent(currentIDLField);
      break;
      }
    case 28:{
      typeName = boolean_type();
      fieldName = identifier();
      jj_consume_token(10);
      cvalue = boolean_literal();
currentIDLField.setName(fieldName);
        currentIDLField.setType(typeName);
        currentIDLField.setValue(cvalue);
        currentIDLField.setStatic(true);
        fieldDeclareEvent.fireEvent(currentIDLField);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public String identifier() throws ParseException {String name = "";
    name = jj_consume_token(ID).image;
{if ("" != null) return name;}
    throw new Error("Missing return statement in function");
  }

  final public String declarators(IDLField currentIDLField) throws ParseException {String ret = ""; String size = ""; currentToken = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      ret = declarator();
{if ("" != null) return ret;}
      break;
      }
    case 19:{
      jj_consume_token(19);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DECIMALINT:{
        currentToken = jj_consume_token(DECIMALINT);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      jj_consume_token(20);
      ret = declarator();
if (currentToken != null) size = currentToken.image;
        if (!size.equals("")) {
            int asize = Integer.parseInt(size);
            if (asize <= 0) {
                genErrorMessage("Illegal array size '" + asize + "'");
            }
            currentIDLField.setArraySize(asize);
        }
        {if ("" != null) return "[] " + ret;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/* Production 35 */
  final public 
String declarator() throws ParseException {String ret = "";
    ret = simple_declarator();
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String type_spec() throws ParseException {String ret = "";
    ret = simple_type_spec();
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String simple_type_spec() throws ParseException {String ret = "";
    ret = base_type_spec();
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String complex_type_spec() throws ParseException {String ret = "";
    ret = base_type_spec();
    fixed_array_size();
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String base_type_spec() throws ParseException {String typeName = "";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:
    case 23:{
      typeName = floating_pt_type();
{if ("" != null) return typeName;}
      break;
      }
    case 24:
    case 25:
    case 26:
    case 27:{
      typeName = integer_type();
{if ("" != null) return typeName;}
      break;
      }
    case 28:{
      typeName = boolean_type();
{if ("" != null) return typeName;}
      break;
      }
    case 29:{
      typeName = string_type();
{if ("" != null) return typeName;}
      break;
      }
    case ID:{
      typeName = idl_type();
currentIDLField.setIdlType(true);
    {if ("" != null) return typeName;}
      break;
      }
    case 21:{
      typeName = abs_idl_type();
currentIDLField.setIdlType(true);
    currentIDLField.setAbstract(true);
    {if ("" != null) return typeName;}
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public String idl_type() throws ParseException {String className = ""; String tName = ""; String fieldName = "";
    tName = identifier();
className += tName;
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      jj_consume_token(11);
className += ".";
      tName = identifier();
className += tName;
    }
{if ("" != null) return className;}
    throw new Error("Missing return statement in function");
  }

  final public String abs_idl_type() throws ParseException {String className = ""; String tName = ""; String fieldName = "";
    jj_consume_token(21);
    tName = identifier();
className += tName;
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      jj_consume_token(11);
className += ".";
      tName = identifier();
className += tName;
    }
{if ("" != null) return className;}
    throw new Error("Missing return statement in function");
  }

  final public String idl_type_array() throws ParseException {String className = ""; String tName = ""; String fieldName = "";
    className = idl_type();
    jj_consume_token(19);
    jj_consume_token(20);
{if ("" != null) return className;}
    throw new Error("Missing return statement in function");
  }

  final public String simple_declarator() throws ParseException {String ret = "";
    ret = identifier();
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String complex_declarator() throws ParseException {String ret = "";
    ret = array_declarator();
{if ("" != null) return ret;}
    throw new Error("Missing return statement in function");
  }

  final public String array_declarator() throws ParseException {String ret = "";
    fixed_array_size();
    ret = identifier();
{if ("" != null) return ret ;}
    throw new Error("Missing return statement in function");
  }

/* Production 64 */
  final public 
void fixed_array_size() throws ParseException {
    jj_consume_token(19);
    jj_consume_token(20);
  }

/* Production 38 */
  final public 
String floating_pt_type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:{
      jj_consume_token(22);
{if ("" != null) return "float" ;}
      break;
      }
    case 23:{
      jj_consume_token(23);
{if ("" != null) return "double" ;}
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
